PP-15896 Extend AdyenPayoutReconciliationPayloadFixture
- Extended AdyenPayoutReconciliationPayloadFixture with the fields that will be set when adding the payload to payout reconcile queue